// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Route - Dialog > when decoding 1`] = `
{
  "doken": {
    "_tag": "Doken",
    "ephemeral": 0,
    "id": "id",
    "status": "Active",
    "ttl": "1970-01-01T00:00:00.000Z",
    "type": 0,
  },
  "hash": "-",
  "origin": "Dialog",
  "root": "root",
}
`;

exports[`Route - Dialog > when encoding 1`] = `"dsx/root/0/0/id/0"`;

exports[`Route - Message > when decoding 1`] = `
{
  "doken": {
    "_tag": "Doken",
    "ephemeral": 0,
    "id": "id",
    "status": "Active",
    "token": "<redacted>",
    "ttl": "1970-01-01T00:00:00.000Z",
    "type": 0,
  },
  "hash": "hash",
  "origin": "Message",
  "root": "root",
}
`;

exports[`Route - Message > when encoding 1`] = `"dsx/root/0/0/id/0/2/token/hash"`;
